--- a/admin-client/src/css/Sidebar.css
+++ b/admin-client/src/css/Sidebar.css
@@ -1,37 +1,84 @@
 *, html {
-    margin:0;
-    padding:0;  
+    margin: 0;
+    padding: 0;  
 }
 
 /*---------------------------------SIDEBAR-------------------------------------------*/
 
+/* Общие стили для sidebar */
 .sidebar {
     font-family: Arial, Helvetica, sans-serif;
     width: 250px;
     background-color: #FFC857;
     position: fixed;
     height: 100%;
-    padding-top: 20px;
-    left: 0;
     top: 0;
+    left: 0;
+    transition: transform 0.3s ease; /* Плавный переход при открытии/закрытии */
+    z-index: 1000;
 }
+
+/* Закрытое меню (выезжает влево) */
+.sidebar.closed {
+    transform: translateX(-100%);
+}
+
+/* Открытое меню */
+.sidebar.open {
+    transform: translateX(0);
+}
+
+/* Кнопка для открытия/закрытия меню */
+.close-button {
+    position: relative;
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #D9D9D9; /* Отличающийся цвет для закрытия меню */
+    border: none;
+    color: black;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+/*---------------------------------MENU BUTTON-------------------------------------------*/
+
+/* Кнопка "Menu" в левом верхнем углу экрана, поверх всего */
+.menu-button {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: #FFC857;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
+    z-index: 9999; /* Кнопка поверх всего */
+}
+
+/*---------------------------------SIDEBAR CONTENT-------------------------------------------*/
+
 .sidebar-title {
     text-align: center;
     font-size: 24px;
-    margin-bottom: 20px;
+    margin: 20px 0px;
     color: #333;
 }
+
 .sidebar-links li {
     margin: 10px 0;
     padding: 10px;
     text-align: center;
 }
+
 .sidebar-links li a {
     text-decoration: none;
     color: #333;
     display: block;
     font-size: 18px;
 }
+
 .sidebar-links li a:hover {
     background-color: #ddd;
     color: #000;
