--- a/admin-client/src/css/CustomerInformationPaige.css
+++ b/admin-client/src/css/CustomerInformationPaige.css
@@ -2,6 +2,7 @@
     margin:0;
     padding:0;  
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /*------------------------------------------------------------------------------*/
@@ -10,11 +11,35 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
     padding-top: 20px;
 }
 .other-content-CustomerInformationPaige{
     padding: 100px;
     display: flex;
     justify-content: center;
+}
+.paige-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/*-------------------------------Customer Information Table-----------------------------------------------*/
+.GetCustomerByID-SearchFunction{
+    background-color: #06368d;
+}
+.Customer-Info-Section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Customer-Info-Table th{
+    background-color: #06368d;
+    color: aliceblue;
+}
+.Table-Datacell-White{
+    background-color: rgb(227, 227, 227);
+}
+.Table-Datacell-Gray{
+    background-color: rgb(197, 197, 197) ;
 }
