--- a/admin-client/src/css/WarehousePage.css
+++ b/admin-client/src/css/WarehousePage.css
@@ -1,4 +1,3 @@
-/* Основные стили для страницы Warehouse */
 .warehouse_page {
     display: flex;
     flex-direction: column;
@@ -8,23 +7,27 @@
     background-color: #f5f5f5;
 }
 
-.heading {
+.heading_warehouse {
     font-size: 32px;
     margin-bottom: 20px;
     color: #333;
 }
 
-.margin_top {
+.margin_top_warehouse {
     margin-top: 40px;
 }
 
-h2, h3, h4 {
+.h2_warehouse, .h3_warehouse, .h4_warehouse {
     font-size: 24px;
     color: #555;
     margin-bottom: 10px;
 }
 
-input {
+.h3_warehouse {
+    margin: 0px;
+}
+
+.input_warehouse {
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -32,7 +35,7 @@ input {
     width: 300px;
 }
 
-button, .fetch_button {
+.button_warehouse {
     padding: 10px 15px;
     background-color: #FFC857;
     color: #333;
@@ -42,19 +45,10 @@ button, .fetch_button {
     margin-bottom: 20px;
 }
 
-button:hover, .fetch_button:hover {
+.button_warehouse:hover {
     background-color: #ffb300;
 }
 
-pre {
-    background-color: #f0f0f0;
-    padding: 15px;
-    border-radius: 5px;
-    max-height: 300px;
-    overflow-y: scroll;
-}
-
-/* Карточки информации */
 .warehouse_card {
     background-color: #fff;
     padding: 20px;
@@ -65,31 +59,29 @@ pre {
     max-width: 1000px;
 }
 
-/* Таблицы */
-table {
+.table_warehouse {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
 }
 
-table, th, td {
+.table_warehouse, .table_warehouse th, .table_warehouse td {
     border: 1px solid #ccc;
 }
 
-th, td {
+.table_warehouse th, .table_warehouse td {
     padding: 10px;
     text-align: left;
 }
 
-th {
+.table_warehouse th {
     background-color: #f9f9f9;
 }
 
-tr:nth-child(even) {
+.tr_warehouse:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-/* Ошибки */
 .error {
     color: red;
     margin-top: 20px;
@@ -105,7 +97,6 @@ tr:nth-child(even) {
 }
 
 
-/* Анимация для скрытия и открытия блоков */
 .arrow_warehouse {
     width: 50px;
     height: 50px;
@@ -127,3 +118,11 @@ tr:nth-child(even) {
     max-height: 1000px;
     padding: 20px;
 }
+
+.section_header_warehouse {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
